# pytts-tool

./: .gitignore  pyproject.toml
src/pytts_tool/: __init__.py
src/pytts_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pytts_tool/tts/: _data.py  data.py
src/pytts_tool/tts/example/: szuv.py
